Fix inconsistent spacing on profile links

--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -133,11 +133,6 @@
       width: 500px;
       margin-bottom: 1rem;
     }
-
-    #links {
-      margin: 0;
-      margin: 1rem 0 2rem 0;
-    }
   }
 
   #hero.profile.site-header-container {
@@ -178,11 +173,7 @@
 
     #links {
       margin: 0;
-      margin-top: 1rem;
-
-      #github, #linkedin, #homepage {
-        margin-top: 2rem;
-      }
+      margin-top: 2rem;
     }
   }
 
